Added auth/refresh api for refreshing with expiration token
