# server/api/controllers/auth/router.js
@@ -4,4 +4,5 @@ import controller from './controller'
 export default express
   .Router()
   .post('/login', controller.login)
+  .post('/refresh', controller.refresh)
   .get('/logout', controller.logout)
